syntax = "proto3";

package product;

service ProductService {
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc GetMultipleProducts (GetMultipleProductsRequest) returns (GetMultipleProductsResponse);
  rpc ReserveProducts (ReserveProductsRequest) returns (ReserveProductsResponse);
  rpc ReleaseReservation (ReleaseReservationRequest) returns (ReleaseReservationResponse);
}

// Existing messages
message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  string product_id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock_quantity = 5;
  int32 reserved_quantity = 6;
  int32 available_quantity = 7;
  bool is_active = 8;
  string sku = 9;
}

// New message for batch product retrieval
message GetMultipleProductsRequest {
  repeated string product_ids = 1;
}

message GetMultipleProductsResponse {
  repeated GetProductResponse products = 1;
}
message ProductReservationItem {
  string product_id = 1;
  int32 quantity = 2;
}

message ReserveProductsRequest {
  repeated ProductReservationItem products = 1;
  string reservation_id = 2; // Unique identifier for this reservation
}

message ProductReservationResult {
  string product_id = 1;
  bool success = 2;
  int32 reserved_quantity = 3;
  string message = 4;
}

message ReserveProductsResponse {
  bool all_reserved = 1;
  repeated ProductReservationResult results = 2;
  string reservation_id = 3;
}

message ReleaseReservationRequest {
  repeated ProductReservationItem products = 1;
  string reservation_id = 2;
}

message ReleaseReservationResponse {
  bool success = 1;
  string message = 2;
}